--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pneu-detector",
-  "version": "0.0.1",
+  "name": "pneumonia-detector",
+  "version": "0.1.0",
   "scripts": {
     "start": "polymer serve",
     "prebuild": "gulp optimize-images",
@@ -17,10 +17,6 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
-    "@firebase/app": "^0.4.1",
-    "@firebase/auth": "^0.11.2",
-    "@firebase/firestore": "^1.3.1",
-    "@firebase/storage": "^0.2.16",
     "@material/card": "^2.1.1",
     "@polymer/app-layout": "^3.0.2",
     "@polymer/paper-dialog": "^3.0.1",
